# claude-convo

./: CLAUDE.md  Cargo.toml  README.md  mise.toml
docs/: claude-code-serialization-format-v2.md  claude-code-serialization-format.md  claude-code-tui-browser-design.md  claude-convo-cli-design.md  claude-convo-implementation-roadmap.md  claude-convo-poc.rs  format-analysis.txt
src/: bm25.rs  display.rs  main.rs  parser.rs  parser_v2.rs  session_names.rs
